Release 1.5 (dev)
=================
* fixes :ghissue:`116` Fixing ManyToMany merging with intermediary models. (thanks int-ua)
* fixes :ghissue:`95` Cannot merge models with subclassed ImageField or FileField: "file not sent". (thanks int-ua)
* fixes :ghissue:`108` merge doesn't account for many-to-many relationships


Release 1.4
===========
* document :ghissue:`112` Undocumented feature: merge_form
* document :ghissue:`108` merge doesn't account for many-to-many relationships
* document :ghissue:`95` Cannot merge models with subclassed ImageField: "file not sent" error
* document :ghissue:`85` merge doesn't work for models related with on_delete=Protect


Release 1.3
===========
* fixes :ghissue:`92` translations are not compiled in package
* fixes :ghissue:`105` Support exporting many to many fields
* fixes :ghissue:`109` AttributeError: module 'adminactions.compat' has no attribute 'nocommit'


Release 1.2
===========
* merge :ghissue:`98` - Django 1.10 support (thanks PetrDlouhy, florianm)


Release 1.1
===========
* merge :ghissue:`91` - add french translation
* merge :ghissue:`88` - Display required columns in byrows_update formset
* merge :ghissue:`87` - Add AdminSite.each_context() to templates context.
* merge :ghissue:`86` - Compilemessages failed for Spanish translation
* merge :ghissue:`83` - byrows_update action: adapt test_permissions to take into byrows update action.
* merge :ghissue:`79` - Permissions don't work



Release 1.0
===========
* minor refactoring
* official support for django 1.4 to 1.9
* official support for python 2.7, 3.3, 3.5
* merge :ghissue:`77` - add initial form values for CSV export
* merge :ghissue:`76` - reuse xls style while iterating over cells
* merge :ghissue:`75` - allow streaming export to CSV response
* merge :ghissue:`73` - Fixing merge on DateTimeField with null=True
* support settings.ADMINACTIONS_CSV_OPTIONS_DEFAULT
* support streaming CSV file response